test/support/deployment_drowzee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drowzee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      serviceAccountName: drowzee
      containers:
      - name: drowzee
        image: drowzee:dev
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
        envFrom:
          - configMapRef:
              name: drowzee
---
apiVersion: v1
kind: Service
metadata:
  name: drowzee
spec:
  selector:
    app: web2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drowzee
spec:
  ingressClassName: nginx
  rules:
  - host: drowzee.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drowzee
            port:
              number: 80
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: drowzee
data:
  SECRET_KEY_BASE: "S2JTslve8ev8XuUEx8jYH8OU3d8BZ7l7WVqo8XpPKFRQkd6TOHSHmbRbOuTOniO+"
  PORT: "8080"
  HOST: "0.0.0.0"
  PHX_SERVER: "true"
