test/support/ingress_drowzee.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-service
spec:
  ingressClassName: nginx
  rules:
  - host: dummyservice.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drowzee
            port:
              number: 80
